--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Next js test blog",
+  "name": "Next-js-test-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^6.0.2"
   },
   "devDependencies": {
     "eslint": "7.29.0",
